GNOME Bugzilla – Bug 783848
local-provider: Purge memory leak
Last modified: 2017-06-18 20:20:48 UTC
.
Created attachment 353866 [details] [review] local-provider: Purge memory leak
Created attachment 353867 [details] [review] local-note: Purge memory leak when deleting note The path obtained for debug text was leaking, fix that.
Review of attachment 353866 [details] [review]: ::: src/libbiji/provider/biji-local-provider.c @@ +415,3 @@ ret = biji_local_note_new_from_info (BIJI_PROVIDER (self), manager, &set); + g_free (folder); folder should be freed outside of the while loop.
Review of attachment 353867 [details] [review]: Looks good to me.
Created attachment 353871 [details] [review] local-provider: Purge memory leak
Review of attachment 353871 [details] [review]: Looks good.
Pushed to master.