local-provider: Purge memory leak

https://bugzilla.gnome.org/show_bug.cgi?id=783848

Signed-off-by: Isaque Galdino <igaldino@gmail.com>